mini_c/lexico.output
State 73 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 ID LPAREN RPAREN LCORCH declarations statement_list RCORCH

    3 declarations: declarations VAR tipo var_list SEMICOLON
    4             | declarations CONST tipo const_list SEMICOLON
    5             | ε

    6 tipo: INT

    7 var_list: ID
    8         | var_list COMMA ID

    9 const_list: ID ASSIGNOP expression
   10           | const_list COMMA ID ASSIGNOP expression

   11 statement_list: statement_list statement
   12               | ε

   13 statement: ID ASSIGNOP expression SEMICOLON
   14          | LCORCH statement_list RCORCH
   15          | IF LPAREN expression RPAREN statement ELSE statement
   16          | IF LPAREN expression RPAREN statement
   17          | WHILE LPAREN expression RPAREN statement
   18          | PRINT LPAREN print_list RPAREN SEMICOLON
   19          | READ LPAREN read_list RPAREN SEMICOLON

   20 print_list: print_item
   21           | print_list COMMA print_item

   22 print_item: expression
   23           | STRING

   24 read_list: ID
   25          | read_list COMMA ID

   26 expression: expression PLUSOP expression
   27           | expression MINUSOP expression
   28           | expression POR expression
   29           | expression DIV expression
   30           | LPAREN expression INTERR expression DOSPUNT expression RPAREN
   31           | MINUSOP expression
   32           | LPAREN expression RPAREN
   33           | ID
   34           | NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    READ (258) 19
    VAR (259) 3
    CONST (260) 4
    INT (261) 6
    IF (262) 15 16
    ELSE (263) 15
    WHILE (264) 17
    PRINT (265) 18
    LPAREN (266) 2 15 16 17 18 19 30 32
    RPAREN (267) 2 15 16 17 18 19 30 32
    SEMICOLON (268) 3 4 13 18 19
    COMMA (269) 8 10 21 25
    ASSIGNOP (270) 9 10 13
    LCORCH (271) 2 14
    RCORCH (272) 2 14
    INTERR (273) 30
    DOSPUNT (274) 30
    NUM <c> (275) 34
    ID <c> (276) 2 7 8 9 10 13 24 25 33
    STRING <c> (277) 23
    PLUSOP (278) 26
    MINUSOP (279) 27 31
    DIV (280) 29
    POR (281) 28
    UMINUS (282)


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program <c> (29)
        on left: 2
        on right: 0
    $@1 (30)
        on left: 1
        on right: 2
    declarations <c> (31)
        on left: 3 4 5
        on right: 2 3 4
    tipo <c> (32)
        on left: 6
        on right: 3 4
    var_list <c> (33)
        on left: 7 8
        on right: 3 8
    const_list <c> (34)
        on left: 9 10
        on right: 4 10
    statement_list <c> (35)
        on left: 11 12
        on right: 2 11 14
    statement <c> (36)
        on left: 13 14 15 16 17 18 19
        on right: 11 15 16 17
    print_list <c> (37)
        on left: 20 21
        on right: 18 21
    print_item <c> (38)
        on left: 22 23
        on right: 20 21
    read_list <c> (39)
        on left: 24 25
        on right: 19 25
    expression <c> (40)
        on left: 26 27 28 29 30 31 32 33 34
        on right: 9 10 13 15 16 17 22 26 27 28 29 30 31 32


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • ID LPAREN RPAREN LCORCH declarations statement_list RCORCH

    ID  shift, and go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    2 program: $@1 ID • LPAREN RPAREN LCORCH declarations statement_list RCORCH

    LPAREN  shift, and go to state 5


State 5

    2 program: $@1 ID LPAREN • RPAREN LCORCH declarations statement_list RCORCH

    RPAREN  shift, and go to state 6


State 6

    2 program: $@1 ID LPAREN RPAREN • LCORCH declarations statement_list RCORCH

    LCORCH  shift, and go to state 7


State 7

    2 program: $@1 ID LPAREN RPAREN LCORCH • declarations statement_list RCORCH

    $default  reduce using rule 5 (declarations)

    declarations  go to state 8


State 8

    2 program: $@1 ID LPAREN RPAREN LCORCH declarations • statement_list RCORCH
    3 declarations: declarations • VAR tipo var_list SEMICOLON
    4             | declarations • CONST tipo const_list SEMICOLON

    VAR    shift, and go to state 9
    CONST  shift, and go to state 10

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 11


State 9

    3 declarations: declarations VAR • tipo var_list SEMICOLON

    INT  shift, and go to state 12

    tipo  go to state 13


State 10

    4 declarations: declarations CONST • tipo const_list SEMICOLON

    INT  shift, and go to state 12

    tipo  go to state 14


State 11

    2 program: $@1 ID LPAREN RPAREN LCORCH declarations statement_list • RCORCH
   11 statement_list: statement_list • statement

    READ    shift, and go to state 15
    IF      shift, and go to state 16
    WHILE   shift, and go to state 17
    PRINT   shift, and go to state 18
    LCORCH  shift, and go to state 19
    RCORCH  shift, and go to state 20
    ID      shift, and go to state 21

    statement  go to state 22


State 12

    6 tipo: INT •

    $default  reduce using rule 6 (tipo)


State 13

    3 declarations: declarations VAR tipo • var_list SEMICOLON

    ID  shift, and go to state 23

    var_list  go to state 24


State 14

    4 declarations: declarations CONST tipo • const_list SEMICOLON

    ID  shift, and go to state 25

    const_list  go to state 26


State 15

   19 statement: READ • LPAREN read_list RPAREN SEMICOLON

    LPAREN  shift, and go to state 27


State 16

   15 statement: IF • LPAREN expression RPAREN statement ELSE statement
   16          | IF • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 28


State 17

   17 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 29


State 18

   18 statement: PRINT • LPAREN print_list RPAREN SEMICOLON

    LPAREN  shift, and go to state 30


State 19

   14 statement: LCORCH • statement_list RCORCH

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 31


State 20

    2 program: $@1 ID LPAREN RPAREN LCORCH declarations statement_list RCORCH •

    $default  reduce using rule 2 (program)


State 21

   13 statement: ID • ASSIGNOP expression SEMICOLON

    ASSIGNOP  shift, and go to state 32


State 22

   11 statement_list: statement_list statement •

    $default  reduce using rule 11 (statement_list)


State 23

    7 var_list: ID •

    $default  reduce using rule 7 (var_list)


State 24

    3 declarations: declarations VAR tipo var_list • SEMICOLON
    8 var_list: var_list • COMMA ID

    SEMICOLON  shift, and go to state 33
    COMMA      shift, and go to state 34


State 25

    9 const_list: ID • ASSIGNOP expression

    ASSIGNOP  shift, and go to state 35


State 26

    4 declarations: declarations CONST tipo const_list • SEMICOLON
   10 const_list: const_list • COMMA ID ASSIGNOP expression

    SEMICOLON  shift, and go to state 36
    COMMA      shift, and go to state 37


State 27

   19 statement: READ LPAREN • read_list RPAREN SEMICOLON

    ID  shift, and go to state 38

    read_list  go to state 39


State 28

   15 statement: IF LPAREN • expression RPAREN statement ELSE statement
   16          | IF LPAREN • expression RPAREN statement

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 44


State 29

   17 statement: WHILE LPAREN • expression RPAREN statement

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 45


State 30

   18 statement: PRINT LPAREN • print_list RPAREN SEMICOLON

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    STRING   shift, and go to state 46
    MINUSOP  shift, and go to state 43

    print_list  go to state 47
    print_item  go to state 48
    expression  go to state 49


State 31

   11 statement_list: statement_list • statement
   14 statement: LCORCH statement_list • RCORCH

    READ    shift, and go to state 15
    IF      shift, and go to state 16
    WHILE   shift, and go to state 17
    PRINT   shift, and go to state 18
    LCORCH  shift, and go to state 19
    RCORCH  shift, and go to state 50
    ID      shift, and go to state 21

    statement  go to state 22


State 32

   13 statement: ID ASSIGNOP • expression SEMICOLON

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 51


State 33

    3 declarations: declarations VAR tipo var_list SEMICOLON •

    $default  reduce using rule 3 (declarations)


State 34

    8 var_list: var_list COMMA • ID

    ID  shift, and go to state 52


State 35

    9 const_list: ID ASSIGNOP • expression

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 53


State 36

    4 declarations: declarations CONST tipo const_list SEMICOLON •

    $default  reduce using rule 4 (declarations)


State 37

   10 const_list: const_list COMMA • ID ASSIGNOP expression

    ID  shift, and go to state 54


State 38

   24 read_list: ID •

    $default  reduce using rule 24 (read_list)


State 39

   19 statement: READ LPAREN read_list • RPAREN SEMICOLON
   25 read_list: read_list • COMMA ID

    RPAREN  shift, and go to state 55
    COMMA   shift, and go to state 56


State 40

   30 expression: LPAREN • expression INTERR expression DOSPUNT expression RPAREN
   32           | LPAREN • expression RPAREN

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 57


State 41

   34 expression: NUM •

    $default  reduce using rule 34 (expression)


State 42

   33 expression: ID •

    $default  reduce using rule 33 (expression)


State 43

   31 expression: MINUSOP • expression

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 58


State 44

   15 statement: IF LPAREN expression • RPAREN statement ELSE statement
   16          | IF LPAREN expression • RPAREN statement
   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression

    RPAREN   shift, and go to state 59
    PLUSOP   shift, and go to state 60
    MINUSOP  shift, and go to state 61
    DIV      shift, and go to state 62
    POR      shift, and go to state 63


State 45

   17 statement: WHILE LPAREN expression • RPAREN statement
   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression

    RPAREN   shift, and go to state 64
    PLUSOP   shift, and go to state 60
    MINUSOP  shift, and go to state 61
    DIV      shift, and go to state 62
    POR      shift, and go to state 63


State 46

   23 print_item: STRING •

    $default  reduce using rule 23 (print_item)


State 47

   18 statement: PRINT LPAREN print_list • RPAREN SEMICOLON
   21 print_list: print_list • COMMA print_item

    RPAREN  shift, and go to state 65
    COMMA   shift, and go to state 66


State 48

   20 print_list: print_item •

    $default  reduce using rule 20 (print_list)


State 49

   22 print_item: expression •
   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression

    PLUSOP   shift, and go to state 60
    MINUSOP  shift, and go to state 61
    DIV      shift, and go to state 62
    POR      shift, and go to state 63

    $default  reduce using rule 22 (print_item)


State 50

   14 statement: LCORCH statement_list RCORCH •

    $default  reduce using rule 14 (statement)


State 51

   13 statement: ID ASSIGNOP expression • SEMICOLON
   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression

    SEMICOLON  shift, and go to state 67
    PLUSOP     shift, and go to state 60
    MINUSOP    shift, and go to state 61
    DIV        shift, and go to state 62
    POR        shift, and go to state 63


State 52

    8 var_list: var_list COMMA ID •

    $default  reduce using rule 8 (var_list)


State 53

    9 const_list: ID ASSIGNOP expression •
   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression

    PLUSOP   shift, and go to state 60
    MINUSOP  shift, and go to state 61
    DIV      shift, and go to state 62
    POR      shift, and go to state 63

    $default  reduce using rule 9 (const_list)


State 54

   10 const_list: const_list COMMA ID • ASSIGNOP expression

    ASSIGNOP  shift, and go to state 68


State 55

   19 statement: READ LPAREN read_list RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 69


State 56

   25 read_list: read_list COMMA • ID

    ID  shift, and go to state 70


State 57

   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression
   30           | LPAREN expression • INTERR expression DOSPUNT expression RPAREN
   32           | LPAREN expression • RPAREN

    RPAREN   shift, and go to state 71
    INTERR   shift, and go to state 72
    PLUSOP   shift, and go to state 60
    MINUSOP  shift, and go to state 61
    DIV      shift, and go to state 62
    POR      shift, and go to state 63


State 58

   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression
   31           | MINUSOP expression •

    $default  reduce using rule 31 (expression)


State 59

   15 statement: IF LPAREN expression RPAREN • statement ELSE statement
   16          | IF LPAREN expression RPAREN • statement

    READ    shift, and go to state 15
    IF      shift, and go to state 16
    WHILE   shift, and go to state 17
    PRINT   shift, and go to state 18
    LCORCH  shift, and go to state 19
    ID      shift, and go to state 21

    statement  go to state 73


State 60

   26 expression: expression PLUSOP • expression

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 74


State 61

   27 expression: expression MINUSOP • expression

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 75


State 62

   29 expression: expression DIV • expression

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 76


State 63

   28 expression: expression POR • expression

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 77


State 64

   17 statement: WHILE LPAREN expression RPAREN • statement

    READ    shift, and go to state 15
    IF      shift, and go to state 16
    WHILE   shift, and go to state 17
    PRINT   shift, and go to state 18
    LCORCH  shift, and go to state 19
    ID      shift, and go to state 21

    statement  go to state 78


State 65

   18 statement: PRINT LPAREN print_list RPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 79


State 66

   21 print_list: print_list COMMA • print_item

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    STRING   shift, and go to state 46
    MINUSOP  shift, and go to state 43

    print_item  go to state 80
    expression  go to state 49


State 67

   13 statement: ID ASSIGNOP expression SEMICOLON •

    $default  reduce using rule 13 (statement)


State 68

   10 const_list: const_list COMMA ID ASSIGNOP • expression

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 81


State 69

   19 statement: READ LPAREN read_list RPAREN SEMICOLON •

    $default  reduce using rule 19 (statement)


State 70

   25 read_list: read_list COMMA ID •

    $default  reduce using rule 25 (read_list)


State 71

   32 expression: LPAREN expression RPAREN •

    $default  reduce using rule 32 (expression)


State 72

   30 expression: LPAREN expression INTERR • expression DOSPUNT expression RPAREN

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 82


State 73

   15 statement: IF LPAREN expression RPAREN statement • ELSE statement
   16          | IF LPAREN expression RPAREN statement •

    ELSE  shift, and go to state 83

    ELSE      [reduce using rule 16 (statement)]
    $default  reduce using rule 16 (statement)


State 74

   26 expression: expression • PLUSOP expression
   26           | expression PLUSOP expression •
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression

    DIV  shift, and go to state 62
    POR  shift, and go to state 63

    $default  reduce using rule 26 (expression)


State 75

   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   27           | expression MINUSOP expression •
   28           | expression • POR expression
   29           | expression • DIV expression

    DIV  shift, and go to state 62
    POR  shift, and go to state 63

    $default  reduce using rule 27 (expression)


State 76

   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression
   29           | expression DIV expression •

    $default  reduce using rule 29 (expression)


State 77

   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   28           | expression POR expression •
   29           | expression • DIV expression

    $default  reduce using rule 28 (expression)


State 78

   17 statement: WHILE LPAREN expression RPAREN statement •

    $default  reduce using rule 17 (statement)


State 79

   18 statement: PRINT LPAREN print_list RPAREN SEMICOLON •

    $default  reduce using rule 18 (statement)


State 80

   21 print_list: print_list COMMA print_item •

    $default  reduce using rule 21 (print_list)


State 81

   10 const_list: const_list COMMA ID ASSIGNOP expression •
   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression

    PLUSOP   shift, and go to state 60
    MINUSOP  shift, and go to state 61
    DIV      shift, and go to state 62
    POR      shift, and go to state 63

    $default  reduce using rule 10 (const_list)


State 82

   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression
   30           | LPAREN expression INTERR expression • DOSPUNT expression RPAREN

    DOSPUNT  shift, and go to state 84
    PLUSOP   shift, and go to state 60
    MINUSOP  shift, and go to state 61
    DIV      shift, and go to state 62
    POR      shift, and go to state 63


State 83

   15 statement: IF LPAREN expression RPAREN statement ELSE • statement

    READ    shift, and go to state 15
    IF      shift, and go to state 16
    WHILE   shift, and go to state 17
    PRINT   shift, and go to state 18
    LCORCH  shift, and go to state 19
    ID      shift, and go to state 21

    statement  go to state 85


State 84

   30 expression: LPAREN expression INTERR expression DOSPUNT • expression RPAREN

    LPAREN   shift, and go to state 40
    NUM      shift, and go to state 41
    ID       shift, and go to state 42
    MINUSOP  shift, and go to state 43

    expression  go to state 86


State 85

   15 statement: IF LPAREN expression RPAREN statement ELSE statement •

    $default  reduce using rule 15 (statement)


State 86

   26 expression: expression • PLUSOP expression
   27           | expression • MINUSOP expression
   28           | expression • POR expression
   29           | expression • DIV expression
   30           | LPAREN expression INTERR expression DOSPUNT expression • RPAREN

    RPAREN   shift, and go to state 87
    PLUSOP   shift, and go to state 60
    MINUSOP  shift, and go to state 61
    DIV      shift, and go to state 62
    POR      shift, and go to state 63


State 87

   30 expression: LPAREN expression INTERR expression DOSPUNT expression RPAREN •

    $default  reduce using rule 30 (expression)
